fix dark navbar + mini preview secondary btn alignment

--- a/projects/components/theme/components/_facets.scss
+++ b/projects/components/theme/components/_facets.scss
@@ -134,7 +134,7 @@ sq-facet-card {
   }
 
   .sq-secondary-actions {
-    margin-top: 1rem !important;
+    margin-top: 1.5rem !important;
   }
 }
 
